# vodozemac-wasm

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: build.yml  rust.yml
javascript/: Cargo.toml  README.md  package-lock.json  package.json
javascript/examples/: 1-to-1-olm.ts  dummy-server.ts  group-chat.ts
javascript/pkg/: package.json  vodozemac.d.ts  vodozemac.js  vodozemac_bg.wasm  vodozemac_bg.wasm.d.ts
javascript/src/: account.rs  group_sessions.rs  lib.rs  session.rs  utilty.rs
javascript/test/: account.test.js  group_session.test.js  sas.test.js  session.test.js
