[package]
name = "vodozemac-javascript"
version = "0.8.1"
edition = "2021"

[lib]
name = "vodozemac"
crate-type = ["cdylib"]

[dependencies.vodozemac]
git = "https://github.com/matrix-org/vodozemac"
rev = "0.8.1"
features = ["js"]

[dependencies]
wasm-bindgen = "0.2.80"
js-sys = "0.3.57"
serde-wasm-bindgen = "0.4.2"
