[package]
name = "vodozemac-js-bindings"
version = "0.8.1"
edition = "2021"
authors = [
  "Anis Mekacher"
]
description = "vodozemac JS (wasm) bindings"
license = "Apache-2.0"
repository = "https://github.com/Mekacher-Anis/vodozemac-bindings"

[lib]
name = "vodozemac"
crate-type = ["cdylib"]

[dependencies.vodozemac]
git = "https://github.com/matrix-org/vodozemac"
rev = "0.8.1"
features = ["js"]

[dependencies]
wasm-bindgen = "0.2.80"
js-sys = "0.3.57"
serde-wasm-bindgen = "0.4.2"
