[package]
name = "vodozemac-wasm-bindings"
version = "0.8.1"
edition = "2021"
authors = [
  "Anis Mekacher"
]
description = "vodozemac JS (wasm) bindings"
license = "Apache-2.0"
repository = "https://github.com/Mekacher-Anis/vodozemac-bindings"

[lib]
name = "vodozemac"
crate-type = ["cdylib"]

[dependencies.vodozemac]
git = "https://github.com/matrix-org/vodozemac"
rev = "0.8.1"
features = ["js"]

################################################################################
#
# Configuration for `wasm-pack`
#
# See https://rustwasm.github.io/docs/wasm-pack/cargo-toml-configuration.html
# for details of what can be set here.
#
################################################################################

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = true

[package.metadata.wasm-pack.profile.release]
# Tell wasm-opt to:
#  * `-Oz`: optimise for size
#  * `-g`: include the "name" section (which holds the printable names for
#    symbols) in the output.
wasm-opt = ['-Oz', '-g']

[dependencies]
wasm-bindgen = "0.2.80"
js-sys = "0.3.57"
serde-wasm-bindgen = "0.4.2"
once_cell = "1.21.3"


[dependencies.web-sys]
version = "0.3.77"
features = ["Document", "Element", "HtmlElement", "Node", "Window"]
